# attic-physics

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  test_math
.cache/clangd/index/: log.h.A2FBEFFA2FF1D0F4.idx  mat3.cpp.BB12975E1F6F4B20.idx  mat3.h.E41A09422D09C52F.idx  math.h.212DEB0B652B2DD8.idx  quat.cpp.CE4490CA442F7D76.idx  quat.h.5CD82FE6A06CF3C3.idx  test_core.cpp.ED2B59CF46D90EE5.idx  vec3.cpp.FB87A67C298948AA.idx  vec3.h.44B67BEC35C2F170.idx
.github/workflows/: ci.yml
cmake/: FindEnzyme.cmake
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GPU_PHYSICS_REFERENCES.md  MATH_LIBRARY.md  PARSER_DESIGN.md  context7_guide.md  integrators.md  log.md
examples/: 00_hello_sphere.cpp  bouncing_ball.cpp
include/attic/compiler/: compiler.h
include/attic/core/log/: log.h
include/attic/core/math/: mat3.h  math.h  quat.h  vec3.h
include/attic/gpu/: buffer.h  device.h  memory.h
include/attic/math/: mat3.h  quat.h  vec3.h
include/attic/physics/: body.h  integrator.h  world.h
include/attic/physics/integrators/: euler.h
include/attic/rigid_body/: transform.h
include/flux/: autodiff.h  core.h  field.h  kernel.h  simulation.h
kernels/: euler.physics  gravity.physics
lib/core/math/: mat3.cpp  quat.cpp
lib/gpu/: buffer.cpp  device.cpp  memory.cpp
src/math/: mat3.cpp  quat.cpp  vec3.cpp  vec3.h
src/physics/: physics.cpp
src/tests/: test_math.cpp
test/cpp/: test_core.cpp  test_log.cpp  test_math.cpp  test_physics.cpp
tools/: attic-compile.cpp
